@@ -1,119 +1,129 @@
 package com.company;
 
-import java.io.*;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.HashMap;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.util.Map;
+import java.util.ArrayList;
+import java.io.DataOutputStream;
+import java.io.DataInputStream;
 
 public class HuffmanCoding {
 
-	private static List<Node> calculateFrequency(File file, int chunkSize) {
-		int[] frequencyArray = new int[256 * chunkSize];
+	private static SortedLinkedList<Node> calculateFrequency(File file) {
+		SortedLinkedList<Node> list = new SortedLinkedList<>();
+		HashMap<Byte, Integer> hashMap = new HashMap<>();
 
-		try (BufferedInputStream bufferedFileR = new BufferedInputStream(new FileInputStream(file))) {
-			byte[] buffer = new byte[1024]; // Adjust the buffer size as needed
-			int bytesRead;
-			while ((bytesRead = bufferedFileR.read(buffer)) != -1) {
-				for (int i = 0; i < bytesRead; i++) {
-					frequencyArray[Byte.toUnsignedInt(buffer[i])]++;
-				}
+		FileInputStream fileR;
+		try {
+			fileR = new FileInputStream(file);
+			long length = file.length();
+			long it = 0;
+			int character;
+			while (length > it) {
+				it += 1;
+				character = fileR.read();
+				byte currentByte = (byte) character;
+				hashMap.merge(currentByte, 1, Integer::sum);
 			}
+			fileR.close();
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
 
-		List<Node> nodeList = new ArrayList<>();
-		for (int i = 0; i < frequencyArray.length; i++) {
-			if (frequencyArray[i] > 0) {
-				nodeList.add(new Node((byte) i, frequencyArray[i], null, null));
-			}
+		for (Map.Entry<Byte, Integer> entry : hashMap.entrySet()) {
+			list.sortedAdd(new Node (entry.getKey(), entry.getValue(), null, null));
 		}
 
-		nodeList.sort(Comparator.comparingInt(node -> node.weight));
-
-		return nodeList;
+		return list;
 	}
 
-	private static Node createNode(File file, int chunkSize) {
-		List<Node> nodeList = calculateFrequency(file, chunkSize);
+	private static Node createNode(File file) {
+		SortedLinkedList<Node> list = HuffmanCoding.calculateFrequency(file);
 
-		while (nodeList.size() >= 2) {
-			Node rightNode = nodeList.remove(0);
-			Node leftNode = nodeList.remove(0);
-			Node node = new Node((byte) 0, rightNode.weight + leftNode.weight, rightNode, leftNode);
-			nodeList.add(node);
-
-			// Re-sort the list after adding a new node
-			nodeList.sort(Comparator.comparingInt(n -> n.weight));
+		while (list.size() >= 2) {
+			Node right = list.remove();
+			Node left = list.remove();
+			Node node = new Node((byte)0, right.weight + left.weight, right, left);
+			list.sortedAdd(node);
 		}
-
-		return nodeList.get(0);
+		return list.getFirst();	
 	}
-
+	
 	private static HashMap<Byte, boolean[]> getCoding(Node tree) {
 		HashMap<Byte, boolean[]> hashMap = new HashMap<>();
-		getCodingRec(tree.rightNode, hashMap, new boolean[0], true);
-		getCodingRec(tree.leftNode, hashMap, new boolean[0], false);
+		HuffmanCoding.getCodingNode(tree.right, hashMap, new boolean[0], true);
+		HuffmanCoding.getCodingNode(tree.left, hashMap, new boolean[0], false);
 		return hashMap;
 	}
 
-	private static void getCodingRec(Node tree, HashMap<Byte, boolean[]> hashMap, boolean[] tab, boolean bool) {
-		boolean[] tmp = Arrays.copyOf(tab, tab.length + 1);
+	private static void getCodingNode(Node tree, HashMap<Byte, boolean[]> hashMap, boolean[] tab, boolean bool) {
+		boolean[] tmp = new boolean[tab.length+1];
+		System.arraycopy(tab, 0, tmp, 0, tab.length);
 		tmp[tab.length] = bool;
-		if (tree.leftNode == null && tree.rightNode == null)
-			hashMap.put(tree.character, tmp);
+		if (tree.left == null && tree.right == null)
+			hashMap.put(tree.chunk, tmp);
 		else {
-			getCodingRec(tree.rightNode, hashMap, tmp, true);
-			getCodingRec(tree.leftNode, hashMap, tmp, false);
+			HuffmanCoding.getCodingNode(tree.right, hashMap, tmp, true);
+			HuffmanCoding.getCodingNode(tree.left, hashMap, tmp, false);
 		}
 	}
 
-	private static void write(File file, HashMap<Byte, boolean[]> hashMap) {
-		try (FileOutputStream fileW = new FileOutputStream(file);
-			 DataOutputStream dataW = new DataOutputStream(fileW)) {
-
+	private static void writeFile(File file, HashMap<Byte, boolean[]> hashMap) {
+		try {
+			FileOutputStream fileW = new FileOutputStream(file);
+			DataOutputStream dataW = new DataOutputStream(fileW);
 			dataW.writeInt(hashMap.size());
 			for (Map.Entry<Byte, boolean[]> entry : hashMap.entrySet()) {
 				fileW.write(entry.getKey());
 				for (boolean bool : entry.getValue()) {
-					fileW.write(bool ? '1' : '0');
+				 	if (bool)
+				 		fileW.write('1');
+				 	else 
+				 		fileW.write('0');
 				}
 				fileW.write(' ');
 			}
+			fileW.close();
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
 	}
 
-	private static HashMap<Byte, boolean[]> read(File file) {
+	private static HashMap<Byte, boolean[]> readFile(File file) {
 		HashMap<Byte, boolean[]> hashMap = new HashMap<>();
-		try (FileInputStream fileR = new FileInputStream(file);
-			 DataInputStream dataR = new DataInputStream(fileR)) {
-
+		try {
+			FileInputStream fileR = new FileInputStream(file);
+			DataInputStream dataR = new DataInputStream(fileR);
 			int length = dataR.readInt();
-			byte currentByte = (byte) fileR.read();
+			byte currentByte = (byte)fileR.read();
 			while (length != 0) {
 				byte character = currentByte;
 				ArrayList<Byte> binary = new ArrayList<>();
-				currentByte = (byte) fileR.read();
+				currentByte = (byte)fileR.read();
 				while (currentByte != ' ') {
 					binary.add(currentByte);
-					currentByte = (byte) fileR.read();
+					currentByte = (byte)fileR.read();
 				}
 				boolean[] bool = new boolean[binary.size()];
 				for (int i = 0; i < binary.size(); i += 1)
 					bool[i] = binary.get(i) == '1';
 				hashMap.put(character, bool);
-				currentByte = (byte) fileR.read();
+				currentByte = (byte)fileR.read();
 				length -= 1;
 			}
+			fileR.close();
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
 		return hashMap;
 	}
 
-	public static void encode(String inputFile, int chunkSize) {
+	public static void compress(String inputFile, int chunkSize) {
 		File file = new File(inputFile);
 		String parentDirectory = file.getParent();
 		Path inputFilePath = Paths.get(inputFile);
@@ -122,10 +132,10 @@ public class HuffmanCoding {
 		String fileExtension = inputFileName.substring(lastDotIndex + 1);
 		String outputFileName = "20011969." + chunkSize + "." + inputFileName.substring(0, lastDotIndex) + "." + fileExtension +  ".hc";
 		File outputFile = new File(parentDirectory, outputFileName);
-		Node node = HuffmanCoding.createNode(file, chunkSize);
+		Node node = HuffmanCoding.createNode(file);
 
 		HashMap<Byte, boolean[]> hashMap = HuffmanCoding.getCoding(node);
-		HuffmanCoding.write(outputFile, hashMap);
+		HuffmanCoding.writeFile(outputFile, hashMap);
 		try {
 			FileInputStream fileR = new FileInputStream(file);
 
@@ -181,34 +191,34 @@ public class HuffmanCoding {
 		}
 	}
 
-	private static void getTreeRec(byte character, boolean[] bool, Node node) {
+	private static void getTreeNode(byte character, boolean[] bool, Node node) {
 		for (int i = 0; i < bool.length-1; i += 1) {
 			if (bool[i]) {
-				if (node.rightNode == null)
-					node.rightNode = new Node((byte)0, 0, null, null);
-				node = node.rightNode;
+				if (node.right == null)
+					node.right = new Node((byte)0, 0, null, null);
+				node = node.right;
 			}
 			else {
-				if (node.leftNode == null)
-					node.leftNode = new Node((byte)0, 0, null, null);
-				node = node.leftNode;
+				if (node.left == null)
+					node.left = new Node((byte)0, 0, null, null);
+				node = node.left;
 			}
 		}
 		if (bool[bool.length-1])
-			node.rightNode = new Node(character, 0, null, null);
+			node.right = new Node(character, 0, null, null);
 		else 
-			node.leftNode = new Node(character, 0, null, null);
+			node.left = new Node(character, 0, null, null);
 	}
 
 	private static Node getTree(HashMap<Byte, boolean[]> hashMap) {
 		Node node = new Node((byte)0, 0, null, null);
 		for (Map.Entry<Byte, boolean[]> entry : hashMap.entrySet()) {
-			HuffmanCoding.getTreeRec(entry.getKey(), entry.getValue(), node);
+			HuffmanCoding.getTreeNode(entry.getKey(), entry.getValue(), node);
 		}
 		return node;
 	}
 
-	public static void decode(String inputFile) {
+	public static void decompress(String inputFile) {
 		File file = new File(inputFile);
 		String parentDirectory = file.getParent();
 		Path inputFilePath = Paths.get(inputFile);
@@ -217,7 +227,7 @@ public class HuffmanCoding {
 		String outputFileName = "extracted." + inputFileName.substring(0, lastDotIndex);
 		File outputFile = new File(parentDirectory, outputFileName);
 
-		HashMap<Byte, boolean[]> hashMap = read(file);
+		HashMap<Byte, boolean[]> hashMap = readFile(file);
 		Node tree = getTree(hashMap);
 		ArrayList<Boolean> list = new ArrayList<>();
 		long fileLength = 0L;
@@ -241,11 +251,11 @@ public class HuffmanCoding {
 
 			currentByte = (byte)fileR.read();
 			currentByte = (byte)fileR.read();
-
+			
 			for (int i = 0; i < 8; i += 1) {
 				if ((byte)((currentByte >> i) & 0x1) == 0)
 					list.add(false);
-				else
+				else 
 					list.add(true);
 			}
 			byte[] buffer = new byte[10];
@@ -255,7 +265,7 @@ public class HuffmanCoding {
 					for (int i = 0; i < 8; i += 1) {
 						if ((byte)((buffer[k] >> i) & 0x1) == 0)
 							list.add(false);
-						else
+						else 
 							list.add(true);
 					}
 				}
@@ -267,16 +277,16 @@ public class HuffmanCoding {
 			FileOutputStream fileW = new FileOutputStream(outputFile);
 			Node node = tree;
 			for (int i = 0; i < list.size() && fileLength > 0; i += 1) {
-				if (node.rightNode != null && node.leftNode != null) {
+				if (node.right != null && node.left != null) {
 					if (list.get(i))
-						node = node.rightNode;
-					else
-						node = node.leftNode;
+						node = node.right;
+					else 
+						node = node.left;
 				}
 				else {
-					fileW.write(node.character);
+					fileW.write(node.chunk);
 					fileLength -= 1;
-					node = list.get(i) ? tree.rightNode : tree.leftNode;
+					node = list.get(i) ? tree.right : tree.left;
 				}
 			}
 			fileW.close();
